@@ -6,6 +6,7 @@ import com.cydeo.entity.User;
 import com.cydeo.repository.ClientVendorRepository;
 import com.cydeo.repository.UserRepository;
 import com.cydeo.service.ClientVendorService;
+import com.cydeo.service.InvoiceService;
 import com.cydeo.util.MapperUtil;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
@@ -22,11 +23,13 @@ public class ClientVendorServiceImpl implements ClientVendorService {
     private final ClientVendorRepository clientVendorRepository;
     private final UserRepository userRepository;
     private final MapperUtil mapperUtil;
+    private final InvoiceService invoiceService;
 
-    public ClientVendorServiceImpl(ClientVendorRepository clientVendorRepository, UserRepository userRepository, MapperUtil mapperUtil) {
+    public ClientVendorServiceImpl(ClientVendorRepository clientVendorRepository, UserRepository userRepository, MapperUtil mapperUtil, InvoiceService invoiceService) {
         this.clientVendorRepository = clientVendorRepository;
         this.userRepository = userRepository;
         this.mapperUtil = mapperUtil;
+        this.invoiceService = invoiceService;
     }
 
     @Override
@@ -39,8 +42,15 @@ public class ClientVendorServiceImpl implements ClientVendorService {
     public List<ClientVendorDto> listAllByCompanyTitle() {
         String username= SecurityContextHolder.getContext().getAuthentication().getName();
         User byUsername = userRepository.findByUsername(username);
-        List<ClientVendor> allByCompanyTitle = clientVendorRepository.findAllByCompanyTitleOrderByClientVendorName(byUsername.getCompany().getTitle());
-        return allByCompanyTitle.stream().map(p->mapperUtil.convert(p, new ClientVendorDto())).collect(Collectors.toList());
+        List<ClientVendor> allByCompanyTitle = clientVendorRepository.findAllByCompanyTitleAndIsDeletedOrderByClientVendorName(byUsername.getCompany().getTitle(),false);
+        List<ClientVendorDto> clientVendorList= allByCompanyTitle.stream().map(p->mapperUtil.convert(p, new ClientVendorDto())).collect(Collectors.toList());
+        List<ClientVendorDto> filteredList=clientVendorList.stream().map(cv->{
+                    if( invoiceService.existByClientVendorId(cv.getId())){
+                        cv.setHasInvoice(true);
+                    }return cv;
+                }
+        ).toList();
+        return filteredList;
     }
 
     @Override
@@ -88,6 +98,18 @@ public class ClientVendorServiceImpl implements ClientVendorService {
         convertedClientVendor.setAddress(clientVendor.getAddress());
         clientVendorRepository.save(convertedClientVendor);
 
+    }
+
+    @Override
+    public void delete(Long id) {
+        ClientVendor clientVendor=clientVendorRepository.findById(id).orElseThrow(
+                    () -> new EntityNotFoundException("Client/Vendor cannot be found with ID "+id)
+            );
+        ClientVendorDto convertedClientVendor=mapperUtil.convert(clientVendor,new ClientVendorDto());
+      boolean hasInvoiceByClientVendorId=  invoiceService.existByClientVendorId(convertedClientVendor.getId());
+       if (! hasInvoiceByClientVendorId){
+       clientVendor.setIsDeleted(true);
+            clientVendorRepository.save(clientVendor);}
     }
 
 }
